<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">WeightTracker</string>
    <string name="action_settings">Action settings</string>
    <string name="add_weight">añadir peso</string>
    <string name="see_chart">ver gráfica</string>
    <string name="weight_separator">,</string>
    <string name="default_weight_decimal">00</string>
     <string name="weight_unit">KG</string>
      <string name="weight">Peso</string>
       <string name="date">Fecha</string>

</resources>
